@@ -222,4 +222,5 @@ Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
 
-[Prereqs]
+[Prereqs / TestRecommends]
+CPAN::Changes = 0.400002
