@@ -1,12 +1,17 @@
 Release history for CPAN-Changes-Group-Dependencies-Details
 
 {{$NEXT}}
+ [BugFix]
+ - Guard against changes in whitespace schemes in future/past CPAN::Changes versions.
+ - Thansk to Slaven Rezić for reporting
+ - closes #1
+
  [Dependencies::Stats]
  - Dependencies changed since 0.001003, see misc/*.deps* for details
  - configure: +1 (recommends: ↑1)
  - develop: +8 ↑3 -2 (recommends: +1, suggests: ↑2)
  - runtime: ↓1 -1 (recommends: +1)
- - test: +1 (recommends: ↑1 ↓1)
+ - test: +1 (recommends: +1 ↑1 ↓1)
 
  [Minor]
  - Drop hard 5.8 requirement
